Aligning issues fixed and billboard template added.

--- a/styles/billboard.css
+++ b/styles/billboard.css
@@ -19,14 +19,18 @@
   margin: 0;
   padding: 0;
   font-family: "Helvetica Neue", sans-serif;
-  /* text shouldn't wrap */
   white-space: nowrap;
 }
 
 .page-content {
+  display: block;
   max-width: 1280px;
   margin: 0 auto;
   flex: 1;
+}
+
+.container {
+  padding: 0 3.285rem;
 }
 
 .center {
@@ -41,10 +45,11 @@
   justify-content: space-between;
 }
 
+/* Navbar */
+
 .header {
   background-color: var(--purple);
   color: var(--white);
-  padding: 0vw 4vw;
   height: 80px;
 }
 
@@ -58,7 +63,6 @@
   list-style: none;
 }
 
-/* Hide mobile size use media  */
 @media screen and (max-width: 67.81rem) {
   .link-list {
     display: none;
@@ -93,6 +97,11 @@
   font-size: 0.9375rem;
 }
 
+.links a:hover {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+
 #products {
   align-items: center;
   display: flex;
@@ -100,11 +109,6 @@
 
 #products:hover {
   text-decoration: none;
-}
-
-.links a:hover {
-  text-decoration: underline;
-  text-underline-offset: 3px;
 }
 
 #arrow {
@@ -149,10 +153,13 @@
   transition: box-shadow 0.3s ease-in-out;
 }
 
-.search {
-  align-self: center;
-}
-
 .hamburger-menu {
   margin-left: 32px;
+}
+
+/* Billboard */
+
+.billboard {
+  background-color: var(--purple);
+  color: var(--white);
 }
